# WhimsyPuzzleMaker

./: .gitignore  README.md  pyproject.toml
Examples/: Readme.md
Exploration/: curve_generation.ipynb
Process/: CreateJigsaw.py  line_warpers.py  segmentation.py
tests/: test_puzzle_piece_creation.py
