[tool.poetry]
name = "whimsypuzzlemaker"
version = "0.1.0"
description = ""
authors = ["Bozhie Pokorny <imbozhie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scikit-image = "^0.22.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
